# RPI_adminServer

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env  crud.py  db.py  init_db.py  main.py  models.py  schemas.py
app/api/v1/: api.py  devices.py  routes_uploads.py  status_logs.py
app/config/: config.py
app/core/: config.py
app/db/: session.py
app/models/: device.py  log.py  user.py
app/routers/v1/: rpi_units.py  upload.py
app/schemas/: device.py  log.py  user.py
app/scripts/: export_openapi.py
app/services/: upload_service.py
app/static/: index.html
app/templates/: devices.html
